# 5G_demo

./: .gitignore  compression_vp9.py  compression_vp9.sh  pyproject.toml  requirements.txt  test.sh  video_source_files.txt  video_source_files_small.txt
src/: accuracy_identification  compressed_accuracy  config.py  identification_example  load_data.py  main.py
src/classification/: __init__.py  classificator.py  evaluator.py  trainer.py  visualizer.py
src/dataloader/: __init__.py  compressor.py  data.py  frame_loader.py  frame_sampler.py  transformed_data.py  video_dataset_splitter.py  video_frame_dataset.py
src/detection/: __init__.py  mt_network.py
src/identification/: __init__.py  facenet_identifier.py  frame_extractor.py
src/modes/: __init__.py  detect.py  identification.py  parser.py  predict.py  training.py
