[tool.poetry]
name = "5g-demo"
version = "0.1.0"
description = ""
authors = ["astefanczyk <astefanczyk@student.agh.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.0"
torchvision = "^0.18.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.0"
opencv-python = "^4.9.0.80"
ypstruct = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
